Fixed sidebar display on mobile

--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -54,7 +54,7 @@ html {
  */
 
 .sidebar {
-  text-align: center;
+  /*text-align: center;*/
   padding: 2rem 1rem;
   color: rgba(255,255,255,.5);
   background-color: #202020;
